--- a/SistemaFacturacionWeb/Views/Compras/Index.cshtml
+++ b/SistemaFacturacionWeb/Views/Compras/Index.cshtml
@@ -53,7 +53,7 @@
                         Factura
                     </label>
                     <div class="col-md-4">
-                        <input type="text" id="Factura" name="Factura" onKeyPress="return validar(event)" placeholder="Nยบ Factura" class="form-control" />
+                        <input type="text" id="Factura" name="Factura" onKeyPress="return validar(event)" placeholder="Num Factura" class="form-control" />
                     </div>
                 </div>
             </div>
@@ -124,7 +124,7 @@
                     <h4>Articulos</h4>
                 </div>
                 <form id="NewOrderForm">
-                    <iframe src="~/WebForm1.aspx" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    <iframe src="~/WebForm1.aspx" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
                     <div class="modal-footer">
                         <button type="reset" class="btn btn-default" data-dismiss="modal">Cerrar</button>
